--- a/index.html
+++ b/index.html
@@ -1,123 +1,40 @@
 <!DOCTYPE html>
-<html lang = "en">
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>Matt St.Clair's Portfolio</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
+  </head>
 
-<head>
-<title>Matthew St.Clair</title>
-<meta charset = "UTF-8" />
-<title>Matthew St.Clair</title>
-<meta name="Matthew St.Clair, 406-750-4566, msstclair@student.rtc.edu" content="About Matt St.Clair">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" type="text/css"href="style.css">
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-<link rel="stylesheet" href="http://meyerweb.com/eric/tools/css/reset/reset.css">
-</head>
-<body >
-
-<!-- <nav class="navbar navbar-default">
-<div id = "container-fluid">
-
-<div class="navbar-header">
-    </div>
-    <ul class="nav navbar-nav">
-      <li><a href="#">Web Dev</a></li>
-      <li><a href="#">Art</a></li>
-      <li><a href="#">About</a></li>
+<header>
+  <nav>
+    <ul class = "nav">
+      <li>About</li>
+      <li><img src="images/git.png" alt="git">  </li>
+      <li><img src="images/linkd.png" alt="linkdIn">  </li>
     </ul>
-  </div>
-</nav>
-	<div class = "row">
-		<div id = "one" class = "col-sm-4 col-md-4 col-lg-3">
+ <h2> Delicious</h2>
+ <h3>The best food blog on the web</h3>
 
-			<img src="MeOnABoat.png" />
-			<ul>
-				<li><label id="name">Matthew St.Clair</label>  </li>
-				<li><label id="phone">(406-750-4566</label>  </li>
-				<li><label id="email">msstclair@student.rtc.edu</label> </li>
-			</ul>
-		</div>
-
-		<div class ="test">
-		<p id="paragraph" class ="col-sm-8 col-md-8 col-lg-9"> I was born and raised for the most part in the Renton area in Washington State. My background is a bit varied. I spent four
-				years in the United States Air Force where I was a nuclear missile maintenance technician. After the service, I went to graduate
-				school for counseling and psychology. I graduated in 2015 and later began this program. I am very interested in a web design/development
-				career. It is my hope to gain skills in this class, go to a web dev coding camp this summer and have a job by the fall  </p>
-
-		</div>
-	</div>
-		<div class = "row">
-			<div id ="big movies" class = "hidden-sm hidden-md hidden-xs">
-				<h1>Movies</h1>
-				<div class = "col-lg-2 hidden-sm hidden-md hidden-xs"> <h1>Rocky</h1>
-				<img src= "rocky-balboa-435.jpg" class="img-responsive">
-				</div>
-				<div class = "col-lg-2 hidden-sm hidden-md hidden-xs"> <h1>RockyII</h1>
-				<img src= "RockyII.jpeg" class="img-responsive">
-				</div>
-				<div class = "col-lg-2 hidden-sm hidden-md hidden-xs"> <h1>RockyIII</h1>
-				<img src= "rockyIII.jpg" class="img-responsive">
-				</div>
-				<div class = "col-lg-2 hidden-sm hidden-md hidden-xs"> <h1>Die Hard</h1>
-				<img src= "DieHard.jpg" class="img-responsive">
-				</div>
-				<div class = "col-lg-2 hidden-sm hidden-md hidden-xs"> <h1>Terminator</h1>
-				<img src= "terminator.jpeg" class="img-responsive">
-				</div>
-			</div>
-			</div>
-			<div class = "row">
-			<div id="big books" class = "hidden-sm hidden-md hidden-xs">
-				<h1>Books</h1>
-				<div class = "col-lg-2 hidden-sm hidden-md hidden-xs"> <h1>The Grapes Of Wrath</h1>
-				<img src= "grapes.jpeg" class="img-responsive">
-				</div>
-				<div class = "col-lg-2 hidden-sm hidden-md hidden-xs"> <h1>Travels With Charlie</h1>
-				<img src= "travels.jpeg" class="img-responsive">
-				</div>
-				<div class = "col-lg-2 hidden-sm hidden-md hidden-xs"> <h1>Cannery Row</h1>
-				<img src= "cannery.jpeg" class="img-responsive">
-				</div>
-				<div class = "col-lg-2 hidden-sm hidden-md hidden-xs"> <h1>Hotel New Hampshire</h1>
-				<img src= "hotel.jpeg" class="img-responsive">
-				</div>
-				<div class = "col-lg-2 hidden-sm hidden-md hidden-xs"> <h1>D&A in London</h1>
-				<img src= "paris.jpeg" class="img-responsive">
-				</div>
-			</div>
-		</div>
-	</div>
+  </nav>
+</header>
+<body>
 
 
-	<div class = "row">
-					<ul id= "list" class = "col-sm-6 col-md-6 hidden-lg">
-						<li><h1><strong>Top Five movies:</strong></h1> <br>
-
-							<ol>
-								<li><h1>Rocky</h1> </li>
-								<li><h1>Rocky II</h1> </li>
-								<li>Rocky III </li>
-								<li>Die Hard</li>
-								<li>Terminator </li>
-							</ol>
-							</li><br>
-						<li><h2><strong>Top Five Books:</strong></h2><br>
-							<ol>
-								<li>The Grapes of Wrath</li>
-								<li>Travels with Charlie </li>
-								<li>Hotel New Hampshire </li>
-								<li>Cannery Row </li>
-								<li>Down and Out in Paris and London </li>
-							</ol>
-						</li>
-					</ul>
-	</div>
+  <article> <img id = "forest" src="images/backgroundForest.jpeg" alt="forest">  <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. </p>
+  <p>Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).</p>
+  <p>Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).</p>
 
 
-</div> -->
+</article>
+
 </body>
-<footer>
-<p>Matthew St.Clair Production</p>
-</footer>
+  <footer>
+  <img id = "myPicture" src="images/MeOnABoat.png" alt="me">
+    <p><h3>Matthew St.Clair</h3>
+    <p>Design Enthusiasist, taking it all in. Mental health therapist turned User Experience therapist. </p></p>
 
 
+  </footer>
 
 </html>
