--- a/index.html
+++ b/index.html
@@ -8,31 +8,33 @@
 
 <header>
   <nav>
+    <h3 id = "name">Matthew St.Clair</h3>
     <ul class = "nav">
-      <li>About</li>
       <li><img src="images/git.png" alt="git">  </li>
       <li><img src="images/linkd.png" alt="linkdIn">  </li>
     </ul>
- <h2> Delicious</h2>
- <h3>The best food blog on the web</h3>
 
   </nav>
 </header>
 <body>
 
 
-  <article> <img id = "forest" src="images/backgroundForest.jpeg" alt="forest">  <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. </p>
-  <p>Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).</p>
-  <p>Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).</p>
 
+  <article>
+    <img id = "myPicture" src="images/MeOnABoat.png" alt="me">
+    <p> Design Enthusiasist, taking it all in. Mental health therapist turned User Experience therapist. </p>
 
 </article>
 
+
 </body>
   <footer>
-  <img id = "myPicture" src="images/MeOnABoat.png" alt="me">
-    <p><h3>Matthew St.Clair</h3>
-    <p>Design Enthusiasist, taking it all in. Mental health therapist turned User Experience therapist. </p></p>
+    <h3> My Work</h3>
+    <ul class = "mywork">
+      <li><img src="images/git.png" alt="git">  </li>
+      <li><img src="images/linkd.png" alt="linkdIn">  </li>
+    </ul>
+
 
 
   </footer>
