added lorem ipsum, google font, and icons linked

--- a/index.html
+++ b/index.html
@@ -4,25 +4,19 @@
     <meta charset="utf-8">
     <title>Matt St.Clair's Portfolio</title>
     <link rel="stylesheet" type="text/css" href="style.css">
+    <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
   </head>
 
 <header>
   <nav>
-    <h3 id = "name">Matthew St.Clair</h3>
-    <ul class = "nav">
-      <li><img src="images/git.png" alt="git">  </li>
-      <li><img src="images/linkd.png" alt="linkdIn">  </li>
-    </ul>
-
+    <h1 id = "name">MATT  ST.CLAIR</h1>
   </nav>
 </header>
 <body>
 
-
-
   <article>
     <img id = "myPicture" src="images/MeOnABoat.png" alt="me">
-    <p> Design Enthusiasist, taking it all in. Mental health therapist turned User Experience therapist. </p>
+    <p> Design Enthusiasist, taking it all in. Mental health therapist turned User Experience therapist. Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. </p>
 
 </article>
 
