--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
 
 <body>
   <header>
-    <h1 id = "name1">MATT </h1>
-    <h1 id = "name2"> ST.CLAIR</h1>
-    <h3 id ="slogan">Simplistic but Futuristic </h3>
     <ul class = "mywork">
       <li><a href="https://github.com/MattStClair"  target="_blank"><img src="images/git.png" alt="git"></a>  </li>
       <li><a href="https://www.linkedin.com/in/matthew-stclair-m-s-607755122/"  target="_blank"><img src="images/linkd.png" alt="linkdIn"></a>  </li>
     </ul>
+    <h1 id = "name1">MATT </h1>
+    <h1 id = "name2"> ST.CLAIR</h1>
+    <h3 id ="slogan">Simplistic but Futuristic </h3>
 
   </header>
 
@@ -23,13 +23,11 @@
     <img id = "myPicture" src="images/MeOnABoat.png" alt="me">
 
     <div id = "aboutMe">
+      <p> <h3> BIO:</h3> As a former mental health therapist, turned front end developer comitted to humane UX, I approach every client as someone I can learn from and every project as a chance to communicate what I have learned.Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. </p>
 
-    <p> <h3> WHAT I DO </h3> As a former mental health therapist, turned front end developer comitted to humane UX, I approach every client as someone I can learn from and every project as a chance to communicate what I have learned. </p>
 
-    <p> <h3> PASSIONS and GROWING EDGES</h3>
-      UX and user conversion rates, site optimization here are two articles I found really interesting.
-      Also, testing my design skills against those of the past, creating album art with CSS and HTML
-      </p>
+      <!-- <p> <h3> WHAT I DO </h3> As a former mental health therapist, turned front end developer comitted to humane UX, I approach every client as someone I can learn from and every project as a chance to communicate what I have learned. </p> -->
+
     </div>
 
 </article>
@@ -38,9 +36,10 @@
   <h3> samples</h3>
 
   <ul class = "mywork">
-    <li><a href="https://mackoyokcam.github.io/Duck-Timer" target="_blank"><img id ="ducktimer" src="images/duckTimer.png" alt="ducktimer"></a>  </li>
+    <li><a href="https://mackoyokcam.github.io/Duck-Timer" target="_blank"> <h4> Collaborative Work</h3><img id ="ducktimer" src="images/duckTimer.png" alt="ducktimer"></a>  </li>
 
-    <li><a href="http://rays.org/" target="_blank"><img id = "rays" src="images/raysImage.png" alt="raysImage"></a>  </li>
+      <li><a href="http://rays.org/" target="_blank"><img id = "rays" src="images/raysImage.png" alt="raysImage"></a>  </li>
+<h4> Content Management</h4>
   </ul>
 
 
