--- a/index.html
+++ b/index.html
@@ -24,7 +24,12 @@
     <img id = "myPicture" src="images/MeOnABoat.png" alt="me">
 
     <div id = "aboutMe">
-       <div id ="bio"><h3 id = "bioTitle"> BIO:</h3> <p>As a former mental health therapist, turned front end developer comitted to humane UX, I approach every client as someone I can learn from and every project as a chance to communicate what I have learned.Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. </p>  </div>
+       <div id ="bio"><h3 id = "bioTitle"> Bio:</h3>
+
+         <p>Hello, my name is Matt St.Clair. I am an Air Force veteran and a mental health therapist, transitioning into the web development field. I am finishing a B.S. in computer applications development from Renton Technical College while also taking full stack web dev courses at Codefellows code camp in Seattle. I enjoy front end as well as back end work but am especially fascinated with UX design and how it blends with my social sciences background. I also enjoy front-end work because it allows me to collaborate and create with clients. </p>
+         <h3 id = "bioTitle">Technical Experience</h4>
+        <p>At codefellows, I have created web apps in HTML, CSS, and JavaScript in Atom using Chrome developer tools, and often working in groups, utilizing issues in GitHub and agile project workflow. At Renton Technical College, I work in Android and Visual Studios using object oriented programming as well as in multiple data base platforms to include MS Access, Excel, and Tableau. I am also the web content manager at Renton Area Youth and Family Services on their Wordpress site.
+         </div>
 
     </div>
 
