changed images, still need to change parargraph

--- a/index.html
+++ b/index.html
@@ -40,13 +40,13 @@
 
 <table class = "myTable">
 
-<tr><th> <h4> Collaborative Work</h3></th> <th> <h4>Content Management</h3></th><th> <h4>Self Study App</h4></th> <th> <h4>Click Counter Graph App </h4></th>  </tr>
+<tr><th> <h4> Collaborative Work</h3></th> <th> <h4>Content Management</h3></th><th> <h4>Self Study App</h4></th> <th> <h4>Wordpress Development </h4></th>  </tr>
 
 <tr>
 <td>  <a href="https://mackoyokcam.github.io/Duck-Timer" target="_blank"> <img id ="ducktimer" src="images/duckTimer.png" alt="ducktimer"></a></td>
-<td>  <a href="http://rays.org/" target="_blank"><img id = "rays" src="images/raysImage.png" alt="raysImage"></a></td>
+<td>  <a href="http://rays.org/blog/" target="_blank"><img id = "rays" src="images/raysSun.png" alt="raysImage"></a></td>
 <td><a href="https://mattstclair.github.io/MFTQuiz/" target="_blank"><img id = "mftsite" src="images/mft.png" alt="mftImage">  </a></td>
-<td><a href="https://mattstclair.github.io/bus-mall/" target="_blank"><img id = "choiceCounter" src="images/pickClick.png" alt="clickImage"></a></td>
+<td><a href="http://www.jessicahafeytherapy.com/" target="_blank"><img id = "choiceCounter" src="images/wpImage.png" alt="clickImage"></a></td>
 </tr>
 
 </table>
