added hyperlinks and changes of all kinds

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <header>
     <ul class = "mywork">
       <li><a href="https://github.com/MattStClair"  target="_blank"><img src="images/git.png" alt="git"></a>  </li>
-      <li><a href="https://www.linkedin.com/in/matthew-stclair-m-s-607755122/"  target="_blank"><img src="images/linkd.png" alt="linkdIn"></a>  </li>
+      <li><a href="https://www.linkedin.com/in/matthewsstclair/"  target="_blank"><img src="images/linkd.png" alt="linkdIn"></a>  </li>
     </ul>
     <h1 id = "name1">MATT </h1>
     <h1 id = "name2"> ST.CLAIR</h1>
@@ -26,9 +26,19 @@
     <div id = "aboutMe">
        <div id ="bio"><h3 id = "bioTitle"> Bio</h3>
 
-         <p>Hello, my name is Matt St.Clair. I am an Air Force veteran and a mental health therapist, transitioning into the web development field. I am finishing a B.S. in computer applications development from Renton Technical College while also taking full stack web development courses at Codefellows code camp in Seattle. I enjoy front end as well as back end work but am especially fascinated with UX design and how it blends with my social sciences background. I also enjoy front-end work because it allows me to collaborate and create with clients. </p>
+         <p>Hello. My name is Matt St.Clair. I am an Air Force veteran, mental health therapist at <a href="www.centeredmindcounseling.com/" target="_blank">Centered Mind Counseling</a>,
+            and a freelance web developer. Currently, I am working with <a href="www.thero.org" target="_blank">Thero.org</a>, to blend my skills as a developer and mental health professional. 
+            After my graduate school program in psychology, I completed a B.S. in computer applications development from Renton Technical College and
+            full stack web development courses at Codefellows code camp in Seattle. I enjoy front end as well as back end
+            work but am especially fascinated with UX design and how it blends with my social sciences background.
+            I also enjoy front-end work because it allows me to collaborate and create with clients. I also enjoy fishing and free parking. </p>
          <h3 id = "bioTitle">Technical Experience</h4>
-        <p>At codefellows, I have created web apps in HTML, CSS, and JavaScript in Atom using Chrome developer tools, and often working in groups, utilizing issues in GitHub and agile project workflow. At Renton Technical College, I work in Android and Visual Studios using object oriented programming as well as in multiple data base platforms to include MS Access, Excel, and Tableau. I am also the web content manager at Renton Area Youth and Family Services on their Wordpress site.
+        <p>I have developed applications and websites on various platforms and in multiple
+          languages in both professional and academic settings. I have created web apps in HTML, CSS, and JavaScript in Atom using Chrome developer tools.
+          I work in Android and Visual Studios using object oriented programming as
+          well as in multiple data base platforms to include MS Access, Excel, and Tableau.
+          utilizing issues in GitHub and agile project workflow.
+          I also do web maintenance and content management for non-profits.
          </div>
 
     </div>
@@ -40,13 +50,14 @@
 
 <table class = "myTable">
 
-<tr><th> <h4> Collaborative Work</h3></th> <th> <h4>Content Management</h3></th><th> <h4>Self Study App</h4></th> <th> <h4>Wordpress Development </h4></th>  </tr>
+<tr><th> <h4>Wordpress Development </h3></th> <th> <h4>Content Management and Site Maintenance</h3></th><th> <h4>Therapy App</h4></th><th> <h4>Self Study App</h4></th> <th> <h4>Collaborative Work</h4></th>  </tr>
 
 <tr>
-<td>  <a href="https://mackoyokcam.github.io/Duck-Timer" target="_blank"> <img id ="ducktimer" src="images/duckTimer.png" alt="ducktimer"></a></td>
+  <td><a href="http://www.jessicahafeytherapy.com/" target="_blank"><img id = "choiceCounter" src="images/wpImage.png" alt="clickImage"></a></td>
 <td>  <a href="http://rays.org/blog/" target="_blank"><img id = "rays" src="images/raysSun.png" alt="raysImage"></a></td>
+<td><a href="https://mattstclair.github.io/feelingReframer/" target="_blank"><img id = "feelingReframersite" src="images/cJung.jpg" alt="JungImage">  </a></td>
 <td><a href="https://mattstclair.github.io/MFTQuiz/" target="_blank"><img id = "mftsite" src="images/mft.png" alt="mftImage">  </a></td>
-<td><a href="http://www.jessicahafeytherapy.com/" target="_blank"><img id = "choiceCounter" src="images/wpImage.png" alt="clickImage"></a></td>
+<td>  <a href="https://mackoyokcam.github.io/Duck-Timer" target="_blank"> <img id ="ducktimer" src="images/duckTimer.png" alt="ducktimer"></a></td>
 </tr>
 
 </table>
