--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
        <div id ="bio"><h3 id = "bioTitle"> Bio</h3>
 
          <p>Hello. My name is Matt St.Clair. I am an Air Force veteran, mental health therapist at <a href="www.centeredmindcounseling.com/" target="_blank">Centered Mind Counseling</a>,
-            and a freelance web developer. Currently, I am working with <a href="www.thero.org" target="_blank">Thero.org</a>, to blend my skills as a developer and mental health professional. 
+            and a freelance web developer. Currently, I am working with <a href="www.thero.org" target="_blank">Thero.org</a>, to blend my skills as a developer and mental health professional.
             After my graduate school program in psychology, I completed a B.S. in computer applications development from Renton Technical College and
             full stack web development courses at Codefellows code camp in Seattle. I enjoy front end as well as back end
             work but am especially fascinated with UX design and how it blends with my social sciences background.
@@ -56,8 +56,8 @@
   <td><a href="http://www.jessicahafeytherapy.com/" target="_blank"><img id = "choiceCounter" src="images/wpImage.png" alt="clickImage"></a></td>
 <td>  <a href="http://rays.org/blog/" target="_blank"><img id = "rays" src="images/raysSun.png" alt="raysImage"></a></td>
 <td><a href="https://mattstclair.github.io/feelingReframer/" target="_blank"><img id = "feelingReframersite" src="images/cJung.jpg" alt="JungImage">  </a></td>
-<td><a href="https://mattstclair.github.io/MFTQuiz/" target="_blank"><img id = "mftsite" src="images/mft.png" alt="mftImage">  </a></td>
-<td>  <a href="https://mackoyokcam.github.io/Duck-Timer" target="_blank"> <img id ="ducktimer" src="images/duckTimer.png" alt="ducktimer"></a></td>
+<td><a href="https://mattstclair.github.io/MFTQuiz/" target="_blank"><img id = "mftsite" src="images/study.jpg" alt="mftImage">  </a></td>
+<td>  <a href="https://mackoyokcam.github.io/Duck-Timer" target="_blank"> <img id ="ducktimer" src="images/handshake.png" alt="ducktimer"></a></td>
 </tr>
 
 </table>
