fixed broken links

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
     <div id = "aboutMe">
        <div id ="bio"><h3 id = "bioTitle"> Bio</h3>
 
-         <p>Hello. My name is Matt St.Clair. I am an Air Force veteran, mental health therapist at <a href="www.centeredmindcounseling.com/" target="_blank">Centered Mind Counseling</a>,
-            and a freelance web developer. Currently, I am working with <a href="www.thero.org" target="_blank">Thero.org</a>, to blend my skills as a developer and mental health professional.
+         <p>Hello. My name is Matt St.Clair. I am an Air Force veteran, mental health therapist at <a href="http://centeredmindcounseling.com/" target="_blank">Centered Mind Counseling</a>,
+            and a freelance web developer. Currently, I am working with <a href="https://www.thero.org/" target="_blank">Thero.org</a>, to blend my skills as a developer and mental health professional.
             After my graduate school program in psychology, I completed a B.S. in computer applications development from Renton Technical College and
             full stack web development courses at Codefellows code camp in Seattle. I enjoy front end as well as back end
             work but am especially fascinated with UX design and how it blends with my social sciences background.
