--- a/index.html
+++ b/index.html
@@ -54,10 +54,10 @@
 
 <tr>
   <td><a href="http://www.jessicahafeytherapy.com/" target="_blank"><img id = "choiceCounter" src="images/wpImage.png" alt="clickImage"></a></td>
-<td>  <a href="http://rays.org/blog/" target="_blank"><img id = "rays" src="images/raysSun.png" alt="raysImage"></a></td>
-<td><a href="https://mattstclair.github.io/feelingReframer/" target="_blank"><img id = "feelingReframersite" src="images/cJung.jpg" alt="JungImage">  </a></td>
-<td><a href="https://mattstclair.github.io/MFTQuiz/" target="_blank"><img id = "mftsite" src="images/study.jpg" alt="mftImage">  </a></td>
-<td>  <a href="https://mackoyokcam.github.io/Duck-Timer" target="_blank"> <img id ="ducktimer" src="images/handshake.png" alt="ducktimer"></a></td>
+<td>  <a href="http://rays.org/blog/" target="_blank"><img id = "rays" src="images/hammer.png" alt="raysImage"></a></td>
+<td><a href="https://mattstclair.github.io/feelingReframer/" target="_blank"><img id = "feelingReframersite" src="images/therapyQ.jpg" alt="JungImage">  </a></td>
+<td><a href="https://mattstclair.github.io/MFTQuiz/" target="_blank"><img id = "mftsite" src="images/book.png" alt="mftImage">  </a></td>
+<td>  <a href="https://mackoyokcam.github.io/Duck-Timer" target="_blank"> <img id ="ducktimer" src="images/handshakethree.png" alt="ducktimer"></a></td>
 </tr>
 
 </table>
