changed some stuff

--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
          <p>Hello. My name is Matt St.Clair. I am an Air Force veteran, mental health therapist at <a href="http://centeredmindcounseling.com/" target="_blank">Centered Mind Counseling</a>,
             and a freelance web developer. Currently, I am working with <a href="https://www.thero.org/" target="_blank">Thero.org</a>, to blend my skills as a developer and mental health professional.
             After my graduate school program in psychology, I completed a B.S. in computer applications development from Renton Technical College and
-            full stack web development courses at Codefellows code camp in Seattle. I enjoy front end as well as back end
-            work but am especially fascinated with UX design and how it blends with my social sciences background.
-            I also enjoy front-end work because it allows me to collaborate and create with clients. I also enjoy fishing and free parking. </p>
+            full stack web development courses at Codefellows code camp in Seattle. I enjoy both front and backend
+            work but am especially fascinated with UX design and how it meshes with my social sciences background.
+            My other interests include fishing and free parking. </p>
          <h3 id = "bioTitle">Technical Experience</h4>
         <p>I have developed applications and websites on various platforms and in multiple
           languages in both professional and academic settings. I have created web apps in HTML, CSS, and JavaScript in Atom using Chrome developer tools.
